[gd_scene load_steps=26 format=3 uid="uid://de7kywohp4pur"]

[ext_resource type="Script" path="res://scripts/tank_multiplaeer.gd" id="1_21urb"]
[ext_resource type="Texture2D" uid="uid://dwm57ny557t0t" path="res://icon.svg" id="2_j5g88"]
[ext_resource type="Texture2D" uid="uid://c2plgu1mrvbh0" path="res://assets/wsquare.png" id="3_1i2xj"]
[ext_resource type="Texture2D" uid="uid://rj3fumfekq3l" path="res://assets/rwcircle.png" id="4_gwlvb"]
[ext_resource type="Texture2D" uid="uid://16fgxqtcfuie" path="res://assets/heart_7.png" id="5_yi2w7"]
[ext_resource type="Texture2D" uid="uid://71hoynnnkhay" path="res://assets/BulletIcon_1.png" id="6_3vl04"]
[ext_resource type="Texture2D" uid="uid://btwa2tfgepbrc" path="res://assets/boom.png" id="7_5apik"]
[ext_resource type="Texture2D" uid="uid://doddq6nbrs6tr" path="res://assets/move_p_tank(1).png" id="8_f7afh"]
[ext_resource type="Texture2D" uid="uid://cppynxd26bmsp" path="res://assets/shoot_button.png" id="9_eqewq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su32n"]
size = Vector2(97, 93)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_y8owc"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Base:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Spinny/Barrel:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Spinny:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:hp")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:bullets")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("username:text")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("hp:value")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("bullets:value")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("explosion:visible")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath(".:visible")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath("explosion:scale")
properties/11/spawn = true
properties/11/replication_mode = 1
properties/12/path = NodePath(".:dead")
properties/12/spawn = true
properties/12/replication_mode = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ipe4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thahe"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqakg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7y2q"]
bg_color = Color(0.709804, 0.65098, 0.258824, 1)

[sub_resource type="Animation" id="Animation_sfoka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.6, 0.6)]
}

[sub_resource type="Animation" id="Animation_iqqcb"]
resource_name = "dead_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6), Vector2(0.38, 0.38), Vector2(0.6, 0.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5wgs"]
_data = {
"RESET": SubResource("Animation_sfoka"),
"dead_anim": SubResource("Animation_iqqcb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgkbk"]
size = Vector2(149.56, 82.185)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6s2su"]
size = Vector2(167.44, 91.755)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j40x2"]
size = Vector2(152.77, 80.755)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05trq"]
size = Vector2(159.7, 95.735)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hxjb"]
size = Vector2(168.165, 86.08)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okcco"]
size = Vector2(142.925, 91.095)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k81ym"]
size = Vector2(153.405, 80.57)

[node name="tank1" type="CharacterBody2D" groups=["tank"]]
script = ExtResource("1_21urb")

[node name="camera" type="Camera2D" parent="."]
limit_left = -2704
limit_top = -1378
limit_right = 2704
limit_bottom = 1378
position_smoothing_enabled = true

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("2_j5g88")

[node name="indicatortemp" type="Sprite2D" parent="Base"]
position = Vector2(60, 0)
scale = Vector2(0.01625, 0.046875)
texture = ExtResource("3_1i2xj")

[node name="Spinny" type="Sprite2D" parent="."]
rotation = -1.57615
scale = Vector2(0.254145, 0.25651)
texture = ExtResource("4_gwlvb")

[node name="Barrel" type="Sprite2D" parent="Spinny"]
position = Vector2(0, 268.995)
scale = Vector2(0.0804968, 0.543858)
texture = ExtResource("3_1i2xj")

[node name="bullet_spawn_thing" type="Node2D" parent="Spinny/Barrel"]
position = Vector2(0, 465.934)
rotation = 1.5708

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_su32n")

[node name="username" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = -159.0
offset_right = 49.0
offset_bottom = -114.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="bullet_cooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="fire_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_y8owc")

[node name="hp" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = -96.0
offset_right = 54.0
offset_bottom = -84.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_7ipe4")
theme_override_styles/fill = SubResource("StyleBoxFlat_thahe")
max_value = 20.0
value = 20.0
show_percentage = false

[node name="bullets" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = -81.0
offset_right = 54.0
offset_bottom = -69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_eqakg")
theme_override_styles/fill = SubResource("StyleBoxFlat_r7y2q")
max_value = 15.0
value = 10.0
show_percentage = false

[node name="heart" type="Sprite2D" parent="."]
position = Vector2(-55, -91)
scale = Vector2(0.489583, 0.53125)
texture = ExtResource("5_yi2w7")

[node name="BulletIcon" type="Sprite2D" parent="."]
position = Vector2(-55, -72)
scale = Vector2(0.732955, 0.773573)
texture = ExtResource("6_3vl04")

[node name="dead_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l5wgs")
}

[node name="explosion" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_5apik")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="1btleft" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(80, 1048)
rotation = -1.5708
scale = Vector2(0.887596, 1.56299)
texture_normal = ExtResource("8_f7afh")
shape = SubResource("RectangleShape2D_tgkbk")
action = "1tbleft"
visibility_mode = 1

[node name="1btleft2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(1561, 729)
scale = Vector2(0.825, 1.46429)
texture_normal = ExtResource("8_f7afh")
texture_pressed = ExtResource("8_f7afh")
shape = SubResource("RectangleShape2D_6s2su")
action = "1forward"
visibility_mode = 1

[node name="1btleft3" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(421, 871.286)
rotation = 1.5708
scale = Vector2(0.902073, 1.46946)
texture_normal = ExtResource("8_f7afh")
shape = SubResource("RectangleShape2D_j40x2")
action = "1tbright"
visibility_mode = 1

[node name="1btleft4" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(1880, 899)
rotation = 1.5708
scale = Vector2(0.769293, 1.39824)
texture_normal = ExtResource("8_f7afh")
shape = SubResource("RectangleShape2D_05trq")
action = "1tright"
visibility_mode = 1

[node name="1btleft5" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(1716, 1056)
rotation = 3.14159
scale = Vector2(0.703486, 1.3809)
texture_normal = ExtResource("8_f7afh")
shape = SubResource("RectangleShape2D_0hxjb")
action = "1backward"
visibility_mode = 1

[node name="1btleft6" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(1424, 1058)
rotation = -1.5708
scale = Vector2(0.800414, 1.20031)
texture_normal = ExtResource("8_f7afh")
shape = SubResource("RectangleShape2D_okcco")
action = "1tleft"
visibility_mode = 1

[node name="1btleft7" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(99, 710)
scale = Vector2(1.57, 1.39286)
texture_normal = ExtResource("9_eqewq")
shape = SubResource("RectangleShape2D_k81ym")
action = "1fire"
visibility_mode = 1

[connection signal="timeout" from="bullet_cooldown" to="." method="_on_bullet_cooldown_timeout"]
[connection signal="timeout" from="fire_cooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="animation_finished" from="dead_anim" to="." method="_on_dead_anim_animation_finished"]
